add div in portfolio +display flex

--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
 
 <footer class="footer">
     <div class="container">
-        <a href="./index.html" class="logo link" lang="en">
+        <a href="./index.html" class="footer-logo logo link" lang="en">
             <span class="accent">Web</span><span class="text">Studio</span>
         </a>
         <address>
             <ul class="address list">
-                <li>
+                <li class="address-list-item">
                     <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li>
+                <li class="address-list-item">
                     <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="address-list-item">
                     <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
              </ul>
