--- a/portfolio.html
+++ b/portfolio.html
@@ -62,68 +62,86 @@
                 <button class="port-btn button-mar" type="button">Маркетинг</button>
             </li>
         </ul>
-        <ul class="example list">
-            <li>
+        <ul class="example-list list">
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
-                    <h2 class="subtitle">Технокряк</h2>
-                    <p class="lists">Веб-сайт</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle">Технокряк</h2>
+                        <p class="lists">Веб-сайт</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
-                    <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
-                    <p class="lists">Дизайн</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+                        <p class="lists">Дизайн</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
-                    <h2 class="subtitle">Ресторан<span lang="en">Seafood</h2>
-                    <p class="lists">Додаток</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle">Ресторан<span lang="en">Seafood</h2>
+                        <p class="lists">Додаток</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
-                    <h2 class="subtitle">Проєкт <span lang="en">Prime</span></h2>
-                    <p class="lists">Маркетинг</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle">Проєкт <span lang="en">Prime</span></h2>
+                        <p class="lists">Маркетинг</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.5.jpg" alt="Додаток Boxes" width="370">
-                    <h2 class="subtitle">Проєкт <span lang="en">Boxes</span></h2>
-                    <p class="lists">Додаток</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle">Проєкт <span lang="en">Boxes</span></h2>
+                        <p class="lists">Додаток</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
-                    <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
-                    <p class="lists">Веб-сайт</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
+                        <p class="lists">Веб-сайт</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
+                   <div class="port-wrapper">
                     <h2 class="subtitle">Видання<span lang="en">Limited Edition</span></h2>
                     <p class="lists">Дизайн</p>
+                   </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
-                    <h2 class="subtitle">Проєкт<span lang="en">LAB</span></h2>
-                    <p class="lists">Маркетинг</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle">Проєкт<span lang="en">LAB</span></h2>
+                        <p class="lists">Маркетинг</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="port-list-item">
                 <a class="port-link link" href="#">
                     <img class="port-img img" src="./images/img2.9.jpg" alt="Growing Business додаток" width="370">
-                    <h2 class="subtitle" lang="en">Growing Business</h2>
-                    <p class="lists">Дизайн</p>
+                    <div class="port-wrapper">
+                        <h2 class="subtitle" lang="en">Growing Business</h2>
+                        <p class="lists">Дизайн</p>
+                    </div>
                 </a>
             </li>
         </ul>
@@ -133,18 +151,18 @@
 
 <footer class="footer">
     <div class="container">
-        <a href="./index.html" class="logo link" lang="en">
+        <a href="./index.html" class="footer-logo logo link" lang="en">
             <span class="accent">Web</span><span class="text">Studio</span>
         </a>
         <address>
             <ul class="address list">
-                <li>
+                <li class="address-list-item">
                     <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li>
+                <li class="address-list-item">
                     <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="address-list-item">
                     <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
