--- a/index.html
+++ b/index.html
@@ -52,22 +52,30 @@
     <section class="characteristic">
         <div class="container">
             <h2 class="invisible">Особливості</h2>
-            <ul class="distinction list">
-                <li>
-                   <h3 class="title">Увага до деталей</h3>
+            <ul class="distinction-list list">
+                <li class="dist-list-item">
+                   <div class="dist-list-container">
+                    <h3 class="title">Увага до деталей</h3>
                     <p class="point">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                   </div>
                 </li>
-                <li>
-                    <h3 class="title">Пунктуальність</h3>
-                    <p class="point">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <li class="dist-list-item">
+                    <div class="dist-list-container">
+                        <h3 class="title">Пунктуальність</h3>
+                        <p class="point">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </div>
                 </li>
-                <li>
-                    <h3 class="title">Планування</h3>
-                    <p class="point">Так само консультація з широким активом значною мірою зумовлює.</p>
+                <li class="dist-list-item">
+                    <div class="dist-list-container">
+                        <h3 class="title">Планування</h3>
+                        <p class="point">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </div>
                 </li>
-                 <li>
-                    <h3 class="title">Сучасні технології</h3>
-                    <p class="point">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                 <li class="dist-list-item">
+                    <div class="dist-list-container">
+                        <h3 class="title">Сучасні технології</h3>
+                        <p class="point">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -76,7 +84,7 @@
     <section class="essential">
         <div class="container">
             <h2 class="title">Чим ми займаємося</h2>
-            <ul class="images list">
+            <ul class="images-list list">
                 <li>
                     <img class="img" src="./images/img1.jpg" alt="Десктопні додатки" width=370>
                 </li>
@@ -93,26 +101,34 @@
     <section class="team">
         <div class="container">
             <h2 class="title">Наша команда</h2>
-            <ul class="squad list">
-                <li>
+            <ul class="team-list list">
+                <li class="team-list-item">
                     <img class="img" src="./images/img4.jpg" alt="Игорь Демьяненко" width=270>
-                    <h3 class="people">Ігор Дем'яненко</h3>
-                    <p class="texts" lang="en">Product Designer</p>
+                    <div class="team-list-container">
+                        <h3 class="people">Ігор Дем'яненко</h3>
+                        <p class="texts" lang="en">Product Designer</p>
+                    </div>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img class="img" src="./images/img5.jpg" alt="Ольга Репина" width=270>
-                    <h3 class="people">Ольга Рєпіна</h3>
-                    <p class="texts" lang="en">Frontend Developer</p>
+                    <div class="team-list-container">
+                        <h3 class="people">Ольга Рєпіна</h3>
+                        <p class="texts" lang="en">Frontend Developer</p>
+                    </div>
                 </li>
-                <li>
-                    <img class="img" src="./images/img6.jpg" alt="Николай Тарасов" width=270>
-                    <h3 class="people">Микола Тарасов</h3>
-                    <p class="texts" lang="en">Marketing</p>
+                <li class="team-list-item">
+                   <img class="img" src="./images/img6.jpg" alt="Николай Тарасов" width=270>
+                   <div class="team-list-container">
+                       <h3 class="people">Микола Тарасов</h3>
+                       <p class="texts" lang="en">Marketing</p>
+                   </div>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img class="img" src="./images/img7.jpg" alt="Михаил Ермаков" width=270>
-                    <h3 class="people">Михайло Єрмаков</h3>
-                    <p class="texts" lang="en">UI Designer</p>
+                    <div class="team-list-container">
+                        <h3 class="people">Михайло Єрмаков</h3>
+                        <p class="texts" lang="en">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
